# cyclonedx-example

./: .gitignore  Cargo.toml  Makefile  default.nix  deps.nix
.github/workflows/: ci.yaml  release.yaml  scan-previous-releases.yaml
bindings/python/: pyproject.toml
bindings/python/cyclonedx_example/: __init__.py
bindings/python/tests/: test_happy_path.py
src/: lib.rs
