[tool.poetry]
name = "cyclonedx-example"
version = "0.1.0"
description = ""
authors = ["Stu Small <stuart.alan.small@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
Jinja2 = "=3.1.2"


[tool.poetry.group.test.dependencies]
pytest = "^8.0.1"

[tool.poetry.group.dev.dependencies]
cyclonedx-bom = "^4.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
